fix intro icons spacing and header backgrounds that dont support blur

--- a/css/style.css
+++ b/css/style.css
@@ -260,14 +260,14 @@ header {
     width: 100vw;
     height: 100%;
     z-index: 99;
-    opacity: 0.9;
-    background: linear-gradient(to top, #fde0e9, #ffeec0, #fff2aa);
+    opacity: 0.8;
+    background: linear-gradient(to top, #fde0e960, #f8ecccb9, #fff2aaee);
   }
 
   .logo {
     max-width: 70px;
-    opacity: 0.9 !important;
-    background: linear-gradient(to top, #fde0e9, #ffeec0, #fff2aa);
+    opacity: 1 !important;
+    /* background: linear-gradient(to top, #fde0e960, #f8ecccb9, #fff2aaee); */
   }
   .nav {
     background-color: unset;
@@ -438,18 +438,29 @@ header {
 }
 
 .intro__icons {
-  display: flex;
+  display: none;
   width: 100vw;
   justify-content: space-around;
   margin: 0 auto 1em;
   padding: 0;
 }
 
+@media (min-width: 350px) {
+  .intro__icons {
+    display: flex;
+  }
+}
+
 .icon__img {
-  /* width: 5rem; */
-  max-width: 10%;
-  max-height: 30px;
+  max-width: 12%;
+  max-height: 1.5rem;
   padding: 0;
+}
+
+@media (min-width: 590px) {
+  .icon__img {
+    max-height: 2rem;
+  }
 }
 
 .section__subtitle--intro {
@@ -511,7 +522,7 @@ header {
   }
 
   .icon__img {
-    max-height: 40px;
+    max-height: 2.5rem;
     padding: 0;
   }
 }
@@ -522,6 +533,10 @@ header {
   }
   .intro__img {
     min-width: 280px;
+  }
+  .icon__img {
+    max-height: 2.5rem;
+    padding: 0;
   }
 }
 
@@ -534,6 +549,10 @@ header {
   }
   .intro__img {
     min-width: 320px;
+  }
+  .icon__img {
+    max-height: 3rem;
+    padding: 0;
   }
 }
 
@@ -1116,6 +1135,7 @@ header {
 
 .website__item--icons img {
   margin: 1rem auto;
+  max-width: 20%;
 }
 
 .tech-used {
